# metarmap

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
data/: GB_chicago_station_list.txt  aviationweather_stations_compiled_2023_03_02.txt  metarmap.service  run_map.sh  station_map.csv  system.cfg
metarmap/: ADDSMETAR.py  main.py
metarmap/ADDSMETAR/: ADDSMETAR.py  METAR.py
samples/: SE_Wisconsin_map.py  SW_Wisconsin_map.py  example.cfg  example.py  feature_example.py  pc_testing_example.py  rpi_example.py
src/: main.py
src/ADDSMETAR/: ADDSMETAR.py  METAR.py
src/LED_Control/: LED_Driver.py  RPi_zero_NeoPixel_LED_Driver.py
src/METAR/: ADDSMETAR.py  ADDS_METAR_Thread.py  Aviation_Weather_METAR_Thread.py  METAR.py  __init__.py  aviation_weather_metar.py
src/metarmap/: Config.py  Logging.py  METAR_Map_Config.py  METAR_SOURCE.py  MainLoop.py  RGB_color.py  RPi_zero_NeoPixel_LED_Driver.py  Station.py  __init__.py  loop.py  parse_metar_source_cfg.py  utils.py
tests/: test_ADDSMETAR.py
tests/test_data/: ADDS_METAR_XML_KMTW_2023_04_18.xml
