[metadata]
name = metarmap
description = Python module for running a METARMAP with raspberry pi
long_description = file: README.md, LICENSE.
author = Austin Langford
license = MIT
license_file = LICENSE
platforms = unix, linux
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.11
package_dir = 
    =src
packages = find:
zip_safe = no

[options.packages.find]
where=src

[options.extras_require]
testing = 
	pytest >= 7.3.1
	pytest-cov >= 4.0.0
	mypy >= 1.2.0
	flake8 >= 6.0.0
	tox >= 4.5

[flake8]
max-line-length = 160