[metadata]
name = metarmap
description = Python module for running a METARMAP with raspberry pi
long_description = file: README.md, LICENSE.
author = Austin Langford
license = MIT
license_file = LICENSE
platforms = unix, linux
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.9
package_dir = 
    =src
packages = 
	rpi-ws281x adafruit-circuitpython-neopixel
	adafruit-blinka
	astral
	RPi.GPIO
zip_safe = no

[options.packages.find]
where=src